# ML_LABS

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
ML_labs/: LICENSE  README.md  docker-compose.yaml  download_data.py  main.py  minio_connect.py  process_data.py  pyproject.toml  requirements.txt  run_experiments.sh  setup.py  tox.ini  upload_data.py
ML_labs/config/: config.json
ML_labs/docs/: Makefile  conf.py  make.bat
ML_labs/src/: model.py  run_experiments.py  utils.py
docs/: conf.py
